fix: popup width does not fit content

--- a/src/components/MapPopup/index.css
+++ b/src/components/MapPopup/index.css
@@ -1,7 +1,7 @@
 .arcadeTable {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: fit-content;
   margin: 8px 0;
 }
 
