--- a/src/components/OtogeMap/index.css
+++ b/src/components/OtogeMap/index.css
@@ -63,7 +63,13 @@ select {
 .arcadeAmount {
 }
 
+/* override */
+.leaflet-popup-content {
+  width: fit-content !important;
+}
+
 .popupContents {
+  width: fit-content;
 }
 
 .popupContents p {
